# openni_ros

./: README.md  stack.xml
nite/: mainpage.dox  manifest.xml
openni/: mainpage.dox  manifest.xml
openni_camera_deprecated/: CMakeLists.txt  manifest.xml  openni_nodelets.xml
openni_camera_deprecated/cfg/: OpenNI.cfg  OpenNI.cfgc
openni_camera_deprecated/cfg/cpp/openni_camera_deprecated/: OpenNIConfig.h
openni_camera_deprecated/docs/: OpenNIConfig-usage.dox
openni_camera_deprecated/launch/: asus_frames.launch  openni_node.launch
openni_camera_deprecated/src/nodelets/: openni_nodelet.cpp  openni_nodelet.h
openni_camera_deprecated/src/nodes/: openni_node.cpp
openni_camera_deprecated/src/openni_camera_deprecated/cfg/: OpenNIConfig.py
